/c-family 2013-08-05  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/58080
	* c-common.c (pointer_int_sum): Add bool parameter.
	* c-common.h (pointer_int_sum): Adjust declaration.

/cp
2013-08-05  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58080
	* typeck.c (cp_pointer_int_sum): Add tsubst_flags_t parameter.
	(cp_build_binary_op): Adjust.

/testsuite
2013-08-05  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58080
	* g++.dg/cpp0x/pr58080.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@201512 138bc75d-0d04-0410-961f-82ee72b054a4